RESOLVED FIXED246259
[IFC][Integration] Fix editing/selection/caret-in-empty-inline-2.html
https://bugs.webkit.org/show_bug.cgi?id=246259
Summary [IFC][Integration] Fix editing/selection/caret-in-empty-inline-2.html
alan
Reported 2022-10-09 13:26:32 PDT
ssia
Attachments
[fast-cq]Patch (1.41 KB, patch)
2022-10-09 13:28 PDT, alan
no flags
alan
Comment 1 2022-10-09 13:28:30 PDT
Created attachment 462900 [details] [fast-cq]Patch
EWS
Comment 2 2022-10-10 06:10:01 PDT
Committed 255341@main (9b097b8ac4ec): <https://commits.webkit.org/255341@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462900 [details].
Radar WebKit Bug Importer
Comment 3 2022-10-10 06:11:18 PDT
Note You need to log in before you can comment on or make changes to this bug.