[IFC][Integration] Fix editing/selection/caret-in-empty-inline-2.html https://bugs.webkit.org/show_bug.cgi?id=246259

Reviewed by Antti Koivisto.

Caret rect computation should not (directly) consult legacy line layout data structures.

* Source/WebCore/rendering/CaretRectComputation.cpp:
(WebCore::computeCaretRectForInline):

Canonical link: https://commits.webkit.org/255341@main